<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/theme_color"
    android:layout_height="match_parent">


    <ImageView
        android:layout_marginTop="@dimen/padding_60"
        android:layout_marginLeft="@dimen/padding_25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/login_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/icon_guohui" />

    <TextView
        android:textSize="@dimen/font_21"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="@dimen/padding_60"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/login_imageView"
        android:id="@+id/login_top_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title" />

    <ImageView
        android:layout_marginTop="@dimen/padding_58"
        android:layout_marginLeft="@dimen/padding_30"
        app:layout_constraintTop_toBottomOf="@+id/login_imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/iv_court_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/icon_court" />

    <TextView
        android:id="@+id/tv_court"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="55dp"
        android:hint="请选择法院"
        android:textColorHint="@color/login_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_top_textView" />


    <View
        android:background="@color/court_devide"
        android:id="@+id/view_court"
        android:layout_marginTop="9dp"
        android:layout_marginStart="@dimen/padding_30"
        android:layout_marginEnd="@dimen/padding_30"
        app:layout_constraintTop_toBottomOf="@+id/tv_court"
        android:layout_width="match_parent"
        android:layout_height="1px">
    </View>


    <ImageView
        android:layout_marginBottom="9dp"
        android:layout_marginTop="@dimen/padding_55"
        android:layout_marginLeft="@dimen/padding_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_user"
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/incon_user_left" />

    <EditText
        android:id="@+id/et_username"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:maxLines="1"
        android:textSize="@dimen/font_16"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/padding_9"
        android:background="@null"
        android:textColorHint="@color/login_hint"
        android:hint="@string/hint_user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="62dp"
        app:layout_constraintBottom_toTopOf="@+id/view_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/court_devide"
        android:id="@+id/view_user"
        android:layout_marginTop="52dp"
        android:layout_marginStart="@dimen/padding_30"
        android:layout_marginEnd="@dimen/padding_30"
        app:layout_constraintTop_toBottomOf="@+id/view_court"
        android:layout_width="match_parent"
        android:layout_height="1px">
    </View>


    <ImageView
        android:layout_marginBottom="9dp"
        android:layout_marginTop="@dimen/padding_55"
        android:layout_marginLeft="@dimen/padding_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_password"
        android:id="@+id/icon_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/icon_password_left" />

    <EditText
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textSize="@dimen/font_16"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/padding_9"
        android:background="@null"
        android:textColorHint="@color/login_hint"
        android:hint="@string/hint_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="62dp"
        app:layout_constraintBottom_toTopOf="@+id/view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <View
        android:id="@+id/view_password"
        android:background="@color/court_devide"
        android:layout_marginTop="52dp"
        android:layout_marginStart="@dimen/padding_30"
        android:layout_marginEnd="@dimen/padding_30"
        app:layout_constraintTop_toBottomOf="@+id/view_user"
        android:layout_width="match_parent"
        android:layout_height="1px">
    </View>

    <ImageView
        android:id="@+id/iv_hide"
        android:layout_marginBottom="@dimen/padding_9"
        android:layout_marginEnd="@dimen/padding_30"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/icon_hide" />

    <TextView
        android:id="@+id/tv_forget_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/padding_30"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/padding_15"
        app:layout_constraintTop_toBottomOf="@+id/view_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password" />

    <CheckBox
        android:id="@+id/cb_remember_pwd"
        android:checked="true"
        android:layout_marginEnd="@dimen/padding_30"
        android:layout_marginTop="@dimen/padding_15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/selector_check"
        android:text="记住密码"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/tv_forget_password"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/padding_50"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_btn_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="登录"
        android:textColor="@color/press_blue"
        android:textSize="16sp" />

    <ImageView
        android:layout_marginRight="5dp"
        android:id="@+id/iv_phone_call"
        android:layout_marginBottom="@dimen/padding_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_phone_call"
        android:layout_width="14dp"
        android:layout_height="14dp"
        app:srcCompat="@mipmap/icon_phone_call" />

    <TextView
        android:id="@+id/tv_phone_call"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/padding_30"
        android:textSize="@dimen/font_13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_phone" />

    <TextView
        android:id="@+id/textView"
        android:textSize="@dimen/font_13"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@id/tv_phone_call"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brief_introduction" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginRight="@dimen/padding_6"
        android:layout_marginBottom="15dp"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@+id/iv_phone_call"
        android:layout_width="14dp"
        android:layout_height="14dp"
        app:srcCompat="@mipmap/icon_jianjie" />


</androidx.constraintlayout.widget.ConstraintLayout>